Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bran
  name: bran-service
spec:
  selector:
    app: bran
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
