Kubernetes/bran.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bran
  name: bran-deployment
  labels:
    app: bran
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bran
  template:
    metadata:
      labels:
        app: bran
    spec:
      containers:
      - name: bran-container
        image: niket50/bran:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata: 
  name: bran-service
  namespace: bran
spec:
  selector:
    app: bran
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: bran
  name: bran-ingress
spec:
  rules:
  - host: ec2-65-2-186-48.ap-south-1.compute.amazonaws.com
    http:
      paths:
      - path: /bran/*
        pathType: Prefix
        backend:
          service:
            name: bran-service
            port:
              number: 8000
